//
//  ShopView.swift
//  zadadnie7
//
//  Created by Przemek Pawlik on 20/01/2024.
//

import SwiftUI

struct ShopView: View {
    var body: some View {
        Text("Shop View")
            .font(.largeTitle)
    }
}


#Preview {
    ShopView()
}
